Align help text left.

--- a/resources/main.css
+++ b/resources/main.css
@@ -53,6 +53,7 @@ li { padding: 5px 0 5px 0; }
 .grid_1 { float:left; }
 .grid_middle {  }
 .grid_2 { float:right; }
+#help { text-align: left; }
 
 span.jquery-console-prompt span.keyword { color: #FFF286; }
 span.jquery-console-prompt span.literal { color: white; }
