Do quick first pass at tipper.

--- a/resources/main.css
+++ b/resources/main.css
@@ -79,6 +79,16 @@ span.jquery-console-prompt span.function { color: #B0A5FF; }
   margin-top:10px;
 }
 
+#tips {
+  border:1px solid black;
+  height:17px;
+  width:386px;
+  padding:6px;
+  text-align:left;
+  margin-top:10px;
+}
+
+
 .console-canvas-container {
   height:400px;
 }
