--- a/resources/main.css
+++ b/resources/main.css
@@ -77,6 +77,7 @@ span.jquery-console-prompt span.function {
   background-color: #000;
   color:#fff;
   padding:6px 12px 7px 12px;
+  margin:0 -2px 0 -2px;
 }
 
 #help {
