--- a/resources/main.css
+++ b/resources/main.css
@@ -8,10 +8,13 @@ body {
   text-align: justify;
 }
 
+a {  color:black; }
+
 .title a { text-decoration:none; border-bottom:1px solid black; color:black;}
 a:hover { color:black; border-bottom:none; }
 
-a { text-decoration:none; color:black; }
+h1 a { text-decoration:none; }
+
 
 h1 { font-size: 30px; font-weight:normal;
      margin-left:auto; margin-right:auto; text-align:center;
