--- a/resources/main.css
+++ b/resources/main.css
@@ -29,7 +29,19 @@ p { line-height:15px; margin:16px 0 16px 0; }
 
 hr { color: #aaa; background-color:#aaa; height:1px; border:0; }
 
-.footer { width:100px; margin-left: auto; margin-right: auto; }
+.footer {
+  width:160px;
+  margin-left:auto; margin-right:auto;
+  text-align:center;
+  font-size:12px;
+  position:absolute;
+  left: 0;
+  right: 0;
+  bottom:0;
+  text-align:center;
+  margin-bottom:10px;
+  width:100%;
+}
 
 .title a { border-bottom:none; }
 
