--- a/resources/main.css
+++ b/resources/main.css
@@ -29,6 +29,14 @@ p { line-height:15px; margin:16px 0 16px 0; }
 
 hr { color: #aaa; background-color:#aaa; height:1px; border:0; }
 
+.strapline {
+  margin-left:auto; margin-right:auto;
+  width:250px;
+  text-align:center;
+  margin-top:-5px;
+  font-size:16px;
+}
+
 .footer {
   width:160px;
   margin-left:auto; margin-right:auto;
