--- a/resources/main.css
+++ b/resources/main.css
@@ -14,6 +14,9 @@ a { color:black; }
 .title a { text-decoration:none; border-bottom:1px solid black; color:black;}
 a:hover { border-bottom:none; }
 
+p a { color:#555; border-bottom:1px solid #555; text-decoration:none; }
+a:hover { border-bottom:none; }
+
 h1 a { text-decoration:none; }
 
 h1 { font-size: 46px; font-weight:normal;
